WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169881
Fix a paste-o in WebPaymentCoordinatorProxy::platformCompletePaymentSession
https://bugs.webkit.org/show_bug.cgi?id=169881
Summary
Fix a paste-o in WebPaymentCoordinatorProxy::platformCompletePaymentSession
Anders Carlsson
Reported
2017-03-20 10:53:30 PDT
Fix a paste-o in WebPaymentCoordinatorProxy::platformCompletePaymentSession
Attachments
Patch
(2.27 KB, patch)
2017-03-20 10:54 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2017-03-20 10:54:28 PDT
Created
attachment 304934
[details]
Patch
Anders Carlsson
Comment 2
2017-03-20 11:30:25 PDT
Committed
r214179
: <
http://trac.webkit.org/changeset/214179
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug