Fix a paste-o in WebPaymentCoordinatorProxy::platformCompletePaymentSession https://bugs.webkit.org/show_bug.cgi?id=169881 rdar://problem/31030944

Reviewed by Dan Bernstein.

Don't always pass PKPaymentAuthorizationStatusFailure to the completion handler.

* UIProcess/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
(WebKit::WebPaymentCoordinatorProxy::platformCompletePaymentSession):

Canonical link: https://commits.webkit.org/186820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214179 268f45cc-cd09-0410-ab3c-d52691b4dbfc